<resources>
    <string name="app_name">MoveMate</string>
    <string name="sign_in_string">Sign In</string>
    <string name="email_string">email</string>
    <string name="password_string">password</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="register">Register</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="or">Or</string>
    <string name="confirm_password">confirm password</string>
    <string name="arrow_back">arrow back</string>
    <string name="iv_regis">iv_regis</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_your_name">enter your name</string>
    <string name="your_name">Your Name</string>
    <string name="further_info">Further information to help us determined your exercise plan</string>
    <string name="age">age</string>
    <string name="height_cm">height (cm)</string>
    <string name="weight_kg">weight (kg)</string>
    <string name="next">Next</string>
    <string name="goal">Goal</string>
    <string name="lose_weight">Lose Weight</string>
    <string name="healthy">Healthy</string>
    <string name="gain_muscle">Gain Muscle</string>
    <string name="spare_days">Your spare days in a week</string>
    <string name="get_your_plan">Get Your Plan</string>
    <string name="welcome">Welcome,</string>
    <string name="name_here">name here</string>
    <string name="email_here">email here</string>
    <string name="profile">profile</string>
    <string name="logout">logout</string>
    <string name="profile_placeholder">profile placeholder</string>
    <string name="bottom_bar">bottom bar</string>
    <string name="home_vector">home vector</string>
    <string name="daily_vector">daily vector</string>
    <string name="profile_text_vector">profile text vector</string>
    <string name="my_plan">My Plan</string>
    <string name="workouts">Workouts</string>
    <string name="history">History</string>
    <string name="instruction">Instruction</string>
    <string name="start">Start</string>
    <string name="focus_area">Focus Area</string>
    <string name="in_total">In Total</string>
    <string name="this_week">This Week</string>
    <string name="calories_kcal">Calories (Kcal)</string>
    <string name="loading">Loading</string>
    <string name="register_inactivity">Register</string>
    <string name="error_empty_fields">Empty Fields</string>
    <string name="password_not_match">Password not Match</string>
    <string name="success">Success</string>
    <string name="tfe_pe_tv_device">Device:</string>
    <string name="tfe_pe_tv_model">Model:</string>
    <string name="tfe_pe_tv_pose_classification">Pose Classification</string>
    <string name="tfe_pe_request_permission">This app needs camera permission.</string>
    <string name="tfe_pe_tv_fps">Fps: %d</string>
    <string name="tfe_pe_tv_score">Score: %.2f</string>
    <string name="tfe_pe_tv_classification_value">- %s</string>
    <string name="start_workout">Start Workout</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="available_time">Available Time</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="night">Night</string>

    <string-array name="date_ranges">
        <item>Select Start Date</item>
        <item>Select End Date</item>
    </string-array>

    <string-array name="tfe_pe_models_array">
        <item>Movenet Lightning</item>
    </string-array>

    <string-array name="tfe_pe_device_name">
        <item>CPU</item>
        <item>GPU</item>
    </string-array>

    <string-array name="workout_name_detail">
        <item>Sit Up</item>
        <item>Push Up</item>
        <!-- <item>Jumping\nJack</item>-->
    </string-array>

    <string-array name="workout_instruction">
        <item>To perform a sit-up, lie down on a mat with your back flat against the ground and your knees bent.\n\nPlace your hands behind your head or cross them over your chest. Engage your core muscles, exhale as you lift your upper body off the ground, and curl your spine to bring your chest towards your knees.\n\nInhale as you lower back down, keeping your neck relaxed. </item>
        <item>To do a push-up, start in a high plank position with your hands slightly wider than shoulder-width apart.\n\nLower your body by bending your elbows, keeping them close to your sides, until your chest nearly touches the ground.\n\nPush back up to the starting position by straightening your arms. Keep your body in a straight line throughout the movement, engaging your core and exhaling as you push up. </item>
        <!--<item>To do a jumping jack, start by standing upright with your feet together and your arms resting at your sides.\n\nIn one fluid motion, jump up and spread your legs wider than shoulder-width apart while simultaneously raising your arms out to the sides and above your head.\n\nYour body should resemble an "X" shape. Quickly jump back to the starting position by bringing your feet together and lowering your arms back down to your sides.</item>
    -->
    </string-array>

    <string-array name="workout_icon">
        <item>@drawable/situp_icon</item>
        <item>@drawable/pushup_icon</item>
        <!--<item>@drawable/jjack</item>-->
    </string-array>

    <string-array name="workout_focus_area">
        <item>@drawable/situp_muscle</item>
        <item>@drawable/pushup_muscle</item>
        <!-- <item>@drawable/jjcak_muscle</item>-->
    </string-array>

    <string-array name="workout_reps">
        <item>10x</item>
        <item>10x</item>
    </string-array>

</resources>