<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileActivity">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="88dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_circle_gray"
        android:contentDescription="@string/profile" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica_neue_bold"
        android:text="@string/name_here"
        android:textColor="@color/orange"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email_here"
        android:fontFamily="@font/helvetica_neue_bold"
        android:textColor="@color/orange"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logout"
        android:contentDescription="@string/logout"
        />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView11"
        app:layout_constraintEnd_toEndOf="@+id/imageView11"
        app:layout_constraintStart_toStartOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/imageView11"
        app:srcCompat="@drawable/profile_placeholder"
        android:contentDescription="@string/profile_placeholder" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bottom_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:layout_constraintVertical_bias="0.884"
        app:srcCompat="@drawable/bottom_bar" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="30dp"
        android:layout_height="25.5dp"
        android:layout_marginStart="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.466"
        app:srcCompat="@drawable/home_vector"
        android:contentDescription="@string/home_vector"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:clickable="true"
        android:contentDescription="@string/daily_vector"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/daily_vector" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="47dp"
        android:layout_height="25dp"
        android:layout_marginEnd="26dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.451"
        app:srcCompat="@drawable/profile_text_vector"
        android:contentDescription="@string/profile_text_vector"
         />

</androidx.constraintlayout.widget.ConstraintLayout>