<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workout.AvailableTimeActivity"
    android:background="@color/orange">

    <com.stevennt.movemate.ui.utils.CustomButton
        android:id="@+id/btn_morning"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/helvetica_neue_bold"
        android:hint="@string/morning"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <com.stevennt.movemate.ui.utils.CustomButton
        android:id="@+id/btn_afternoon"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/helvetica_neue_bold"
        android:hint="@string/afternoon"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_morning" />

    <com.stevennt.movemate.ui.utils.CustomButton
        android:id="@+id/btn_night"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/helvetica_neue_bold"
        android:hint="@string/night"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_afternoon" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/helvetica_neue_bold"
        android:text="@string/available_time"
        android:textColor="@color/offWhite"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_name6"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="58dp"
        android:clickable="true"
        android:contentDescription="@string/arrow_back"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back"
        app:tint="@color/offWhite" />
</androidx.constraintlayout.widget.ConstraintLayout>