<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bio.AgeActivity"
    android:background="@color/orange">

    <com.stevennt.movemate.ui.utils.CustomButton
        android:id="@+id/name_button2"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/helvetica_neue_bold"
        android:hint="@string/next"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_weight" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/offWhite"
        android:ems="10"
        android:fontFamily="@font/helvetica_neue_bold"
        android:hint="@string/age"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:textColorHint="@color/offWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/et_height"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/offWhite"
        android:ems="10"
        android:fontFamily="@font/helvetica_neue_bold"
        android:hint="@string/height_cm"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:textColorHint="@color/offWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_age" />

    <EditText
        android:id="@+id/et_weight"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/offWhite"
        android:ems="10"
        android:fontFamily="@font/helvetica_neue_bold"
        android:hint="@string/weight_kg"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:textColorHint="@color/offWhite"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_height" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/helvetica_neue_bold"
        android:text="@string/further_info"
        android:textAlignment="viewEnd"
        android:textColor="@color/offWhite"
        android:layout_marginRight="34dp"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_name2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="58dp"
        android:contentDescription="@string/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back"
        app:tint="@color/offWhite"
        android:clickable="true"
        android:focusable="true"/>
</androidx.constraintlayout.widget.ConstraintLayout>