<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bio.SpareDayActivity"
    android:background="@color/orange">

    <com.stevennt.movemate.ui.utils.CustomButton
        android:id="@+id/btn_spare"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/helvetica_neue_bold"
        android:hint="@string/next"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_spare_day" />

    <EditText
        android:id="@+id/et_goal_weight"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/offWhite"
        android:ems="10"
        android:fontFamily="@font/helvetica_neue_bold"
        android:hint="@string/weight_kg"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:textColorHint="#FFA78F"
        android:textColor="@color/offWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <EditText
        android:id="@+id/et_spare_day"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/offWhite"
        android:ems="10"
        android:fontFamily="@font/helvetica_neue_bold"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:hint="range (3-7 days)"
        android:textColorHint="#FFA78F"
        android:textColor="@color/offWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/helvetica_neue_bold"
        android:text="@string/goal"
        android:textColor="@color/offWhite"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_spare"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="58dp"
        android:contentDescription="@string/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_back"
        app:tint="@color/offWhite"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="224dp"
        android:layout_height="196dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="28dp"
        android:alpha="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/goal_page" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/helvetica_neue_bold"
        android:text="@string/spare_days"
        android:textColor="@color/offWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_goal_weight" />

</androidx.constraintlayout.widget.ConstraintLayout>